--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_chat.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_chat.xml
@@ -9,16 +9,25 @@
         android:id="@+id/topBar"
         android:layout_width="720px"
         android:layout_height="@dimen/top_bar_height"
-        android:background="@color/white" >
+        android:background="@color/black_top_bar_bg" >
 
         <TextView
             android:id="@+id/textViewTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:text="@string/chat"
-            style="@style/title" />
+            android:layout_toRightOf="@+id/imageViewBack"
+            android:textColor="@color/white"
+            android:layout_marginLeft="10px"
+            android:textSize="40px" />
 
         <ImageView
             android:id="@+id/imageViewBack"
-            style="@style/back_image"
+            android:layout_width="82px"
+            android:layout_height="82px"
+            android:layout_centerVertical="true"
+            android:background="@drawable/back_btn_selector"
             />
     </RelativeLayout>
 
