--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_rounded_bordered.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_rounded_bordered.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
     
     <solid android:color="@color/white"/>
-    <corners android:radius="@dimen/button_corner_radius"/>
+    <corners android:radius="3dp"/>
     <stroke 
         android:width="1px"
         android:color="@color/grey_light"
