--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/menu_black_btn_normal.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/menu_black_btn_normal.xml
@@ -3,6 +3,6 @@
        android:shape="rectangle" >
 
     <solid android:color="@color/menu_black"/>
-    <corners android:radius="@dimen/button_corner_radius"/>
+    <corners android:radius="3dp"/>
 
 </shape>
