--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_corner_normal.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/new_orange_btn_corner_normal.xml
@@ -3,5 +3,5 @@
        android:shape="rectangle" >
 
 <solid android:color="@color/red_v2"/>
-<corners android:radius="@dimen/button_corner_radius"/>
+<corners android:radius="3dp"/>
 </shape>
