--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -26,8 +26,8 @@
             <RelativeLayout
                 android:id="@+id/relativeLayoutInRideIns"
                 android:layout_width="match_parent"
-                android:layout_height="88px"
-                android:background="@color/jet_black">
+                android:layout_height="90px"
+                android:background="@color/black_top_bar_bg">
 
                 <TextView
                     android:id="@+id/textViewRideInstructions"
