--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -10,7 +10,7 @@
 
     <color name="black">#202020</color>
     <color name="black_light">#505050</color>
-
+    <color name="status_bar">#141720</color>
     <color name="black_grey">#575757</color>
 
     <color name="black_text_shop">#1C1C1C</color>
