feature_new_pool_ui: perfect ride ui fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_chat.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_chat.xml
@@ -18,6 +18,7 @@
             android:layout_centerInParent="true"
             android:text="@string/chat"
             android:layout_toRightOf="@+id/imageViewBack"
+            android:layout_marginRight="12px"
             android:textColor="@color/white"
             android:layout_marginLeft="10px"
             android:textSize="40px" />
