--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -36,7 +36,7 @@
                     android:text="@string/NA"
                     android:textColor="@color/white"
                     android:textSize="36px"
-                    android:layout_marginLeft="28px"
+                    android:layout_marginLeft="54px"
                     android:layout_centerVertical="true"/>
 
                 <Button
@@ -46,6 +46,7 @@
                     android:layout_height="45px"
                     android:textSize="24px"
                     android:layout_marginRight="28px"
+                    android:visibility="visible"
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
                     android:text="@string/change"/>
@@ -65,13 +66,11 @@
 
                 <RelativeLayout
                     android:id="@+id/relativeLayoutCall1"
-                    android:layout_width="140px"
+                    android:layout_width="240px"
                     android:layout_height="56px"
                     android:layout_marginRight="28px"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:visibility="gone"
-                    android:background="@drawable/background_white_rounded_bordered">
+                    android:visibility="visible">
 
                     <ImageView
                         android:id="@+id/driverCallIcon1"
@@ -79,17 +78,17 @@
                         android:layout_height="28px"
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="15px"
-                        android:src="@drawable/call_black_icon"/>
+                        android:src="@drawable/call_icon"/>
 
-                    <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
-                        android:id="@+id/textViewCall1"
-                        android:layout_width="110px"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="65px"
-                        android:text="@string/call"
-                        android:textColor="@color/jet_black"
-                        android:textSize="28px"/>
+                    <!--<product.clicklabs.jugnoo.driver.utils.CustomTextVeiw-->
+                        <!--android:id="@+id/textViewCall1"-->
+                        <!--android:layout_width="110px"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:layout_marginLeft="65px"-->
+                        <!--android:text="@string/call"-->
+                        <!--android:textColor="@color/jet_black"-->
+                        <!--android:textSize="28px"/>-->
                 </RelativeLayout>
 
             </RelativeLayout>
