--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
@@ -6,15 +6,12 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     card_view:cardBackgroundColor="@android:color/transparent"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    card_view:cardCornerRadius="3dp"
     card_view:cardUseCompatPadding="true">
 
     <LinearLayout
         android:id="@+id/linearLayoutDeliveryItem"
-        android:layout_width="640px"
-        android:layout_height="288px"
+        android:layout_width="match_parent"
+        android:layout_height="308px"
         android:background="@color/grey_light_delivery_tab_fill"
         android:orientation="vertical">
 
@@ -31,7 +28,7 @@
                 android:layout_marginLeft="30px"
                 android:layout_centerVertical="true"
                 android:text="@string/NA"
-                android:textSize="28px"
+                android:textSize="32px"
                 android:visibility="visible"
                 android:textColor="@color/black_text_v2"/>
 
@@ -54,15 +51,16 @@
                 android:text="@string/NA"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="30px"
-                android:textSize="28px"
+                android:textSize="32px"
                 android:textColor="@color/black_text_v2"/>
 
         </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="132px"
+            android:layout_height="144px"
             android:orientation="horizontal"
+            android:gravity="center_vertical"
             android:layout_marginTop="12px">
 
             <LinearLayout
@@ -73,11 +71,11 @@
 
                 <TextView
                     android:id="@+id/textViewCustomerDeliveryAddress"
-                    android:layout_width="352px"
+                    android:layout_width="402px"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="30px"
                     android:maxLines="4"
-                    android:textSize="26px"
+                    android:textSize="30px"
                     android:text="lllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllllll"
                     android:textColor="@color/black_text_v2"
                     />
@@ -98,10 +96,9 @@
 
             <RelativeLayout
                 android:id="@+id/relativeLayoutCall"
-                android:layout_width="200px"
-                android:layout_height="64px"
+                android:layout_width="220px"
+                android:layout_height="72px"
                 android:layout_marginLeft="25px"
-                android:layout_marginTop="15px"
                 android:visibility="visible"
                 android:background="@drawable/new_orange_btn_corner_normal">
 
@@ -118,7 +115,7 @@
                     android:layout_width="130px"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="85px"
+                    android:layout_marginLeft="95px"
                     android:text="@string/call"
                     android:textColor="@drawable/white_color_selector"
                     android:textSize="42px"/>
@@ -129,7 +126,6 @@
                 android:layout_width="235px"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20px"
-                android:layout_marginTop="15px"
                 android:visibility="gone"
                 >
 
@@ -137,7 +133,7 @@
                     android:id="@+id/textViewCashCollectedValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="34px"
+                    android:textSize="36px"
                     android:text="@string/NA"
                     android:textColor="@color/black_text_v2"
                     android:layout_centerHorizontal="true"
@@ -148,7 +144,7 @@
                     android:layout_below="@+id/textViewCashCollectedValue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="22px"
+                    android:textSize="24px"
                     android:text="@string/cash_collected"
                     android:textColor="@color/black_text_v2"
                     android:layout_centerHorizontal="true"
@@ -199,8 +195,8 @@
 
             <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                 android:id="@+id/buttonMarkDeliver"
-                android:layout_width="270px"
-                android:layout_height="64px"
+                android:layout_width="300px"
+                android:layout_height="72px"
                 android:background="@drawable/new_orange_btn_normal_rounded"
                 android:text="@string/deliver"
                 android:visibility="visible"
@@ -209,8 +205,8 @@
 
             <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                 android:id="@+id/buttonMarkReturn"
-                android:layout_width="270px"
-                android:layout_height="64px"
+                android:layout_width="300px"
+                android:layout_height="72px"
                 android:background="@drawable/new_orange_btn_normal_rounded"
                 android:text="@string/returned"
                 android:visibility="gone"
@@ -220,14 +216,14 @@
 
             <product.clicklabs.jugnoo.driver.utils.CustomButtonView
                 android:id="@+id/buttonMarkFailed"
-                android:layout_width="270px"
-                android:layout_height="64px"
-                android:layout_marginLeft="35px"
+                android:layout_width="300px"
+                android:layout_height="72px"
+                android:layout_marginLeft="44px"
                 android:visibility="visible"
                 android:background="@drawable/new_menu_black_btn_selector_rounded"
                 android:text="@string/fail"
                 android:textColor="@drawable/white_color_selector"
-                android:textSize="32px"/>
+                android:textSize="36px"/>
 
         </LinearLayout>
 
