--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_grey_deivery_list_rounded_bordered.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_grey_deivery_list_rounded_bordered.xml
@@ -3,7 +3,7 @@
        android:shape="rectangle" >
 
     <solid android:color="#f6f6f6"/>
-    <corners android:radius="@dimen/button_corner_radius"/>
+    <corners android:radius="3dp"/>
     <stroke
         android:width="1dp"
         android:color="@color/grey_alpha_66"
