--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_rounded_orange_bordered.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/drawable/background_white_rounded_orange_bordered.xml
@@ -3,7 +3,7 @@
        android:shape="rectangle" >
 
     <solid android:color="@color/white"/>
-    <corners android:radius="@dimen/button_corner_radius_less"/>
+    <corners android:radius="3dp"/>
     <stroke
         android:width="2px"
         android:color="@color/new_orange"
