--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_task_item.xml
@@ -18,7 +18,7 @@
         <RelativeLayout
             android:id="@+id/linearLayoutDeliveryItemHeader"
             android:layout_width="match_parent"
-            android:layout_height="64px"
+            android:layout_height="72px"
             android:background="@color/white">
 
             <TextView
@@ -41,7 +41,7 @@
                 android:gravity="center"
                 android:textSize="28px"
                 android:visibility="gone"
-                android:textColor="@color/white"/>
+                android:textColor="@color/black_text_v2"/>
 
             <TextView
                 android:id="@+id/textViewListCount"
